<resources>
    <string name="app_name">Game Backlog</string>
    <string name="title_activity_add_game_new">New Game</string>
    <string name="title_activity_add_game_update">Update Game</string>
    <string name="action_settings">Settings</string>
    <string name="delete_list">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="statusLabel">Status</string>
    <string name="platformHint">Platform</string>
    <string name="dropdownPrompt">Pick a status</string>
    <string name="emptyTextfieldMessage">One of the fields is empty!</string>
    <string name="undoText">Undo</string>
    <string name="deletedSingleMessage">Deleted: </string>
    <string name="deletedAllMessage">Deleted all games</string>
    <string-array name="gameStatus">
        <item>Want to play</item>
        <item>Playing</item>
        <item>Stalled</item>
        <item>Dropped</item>
        <item>Completed</item>
    </string-array>
</resources>
